<resources>
    <string name="app_name">loginUi</string>
    <string name="log_in">Log In</string>
    <string name="sing_up">Sing Up</string>
    <string name="hello_again">Hello Again!</string>
    <string name="sign_up">Sign up</string>
    <string name="or">Or</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="welcome">Welcome</string>
</resources>