<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:fitsSystemWindows="true"
    android:background="@drawable/bkg"

    android:orientation="vertical"
    android:rotation="0"
    android:rotationX="0"
    android:rotationY="0"
    app:layout_constraintCircleRadius="15dp"
    tools:context=".MainActivity"

    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/hello_again"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold|normal|italic"
        android:paddingTop="80dp"/>

    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="38dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="38dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true"

        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#ffffff">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/switch_tumbs"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2"
                android:padding="0dp">

                <TextView


                    android:id="@+id/logIn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/switch_trcks"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/log_in"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    android:textStyle="bold|normal" />

                <TextView

                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:id="@+id/signUp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/sign_up"
                    android:textAlignment="center"
                    android:textColor="@color/pinkColor"
                    android:textSize="16sp"
                    android:textStyle="bold|normal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/logInLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="25dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Username"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:boxStrokeColor="#486dc5"
                    app:boxStrokeWidth="1dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:theme="@style/Button4"
                    android:textColorHint="#9C9C9C"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="textPersonName|textEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/eMail"
                        android:ems="10"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                         />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:boxStrokeColor="#486dc5"
                    app:boxStrokeWidth="1dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:theme="@style/Button4"
                    android:textColorHint="#9C9C9C"
                    app:endIconMode="password_toggle"


                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/password"
                        android:ems="10"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:textStyle="normal"

                        />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:textSize="11sp"
                    android:text="@string/forgot_password"
                    android:textAlignment="textEnd"
                    android:textColor="#616161"
                    android:textStyle="normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8sp"
                    android:layout_marginEnd="4sp"/>
            </LinearLayout>
            <LinearLayout
                android:visibility="gone"
                android:id="@+id/signUpLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="25dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:boxStrokeColor="#486dc5"
                    app:boxStrokeWidth="1dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:theme="@style/Button4"
                    android:textColorHint="#9C9C9C"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="textPersonName|textEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/eMail1"
                        android:ems="10"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Password"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:boxStrokeColor="#486dc5"
                    app:boxStrokeWidth="1dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:theme="@style/Button4"
                    android:textColorHint="#9C9C9C"
                    app:endIconMode="password_toggle"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/password1"
                        android:ems="10"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    app:shapeAppearanceOverlay="@style/Button4"
                    app:boxStrokeColor="#486dc5"
                    app:boxStrokeWidth="1dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:theme="@style/Button4"
                    android:textColorHint="#9C9C9C"
                    app:endIconMode="password_toggle"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/password2"
                        android:ems="10"
                        android:textSize="13sp"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/SignIn"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:elevation="15dp"
                android:gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                app:shapeAppearanceOverlay="@style/Button5"
                app:backgroundTint="@color/pinkColor"
                android:textColor="@color/textColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                />
            <TextView
                android:textSize="16sp"
                android:text="@string/or"
                android:textAlignment="center"
                android:textColor="#616161"
                android:textStyle="normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                />
            <LinearLayout
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/ic_facebook"
                    android:layout_margin="10dp"
                    android:layout_width="35dp"
                    android:layout_height="35dp"/>
                <ImageView
                    android:src="@drawable/ic_google"
                    android:layout_margin="10dp"
                    android:layout_width="35dp"
                    android:layout_height="35dp"/>
                <ImageView
                    android:src="@drawable/ic_twitter"
                    android:layout_margin="10dp"
                    android:layout_width="35dp"
                    android:layout_height="35dp"/>
        </LinearLayout>
        </LinearLayout>



    </androidx.cardview.widget.CardView>
</LinearLayout>